attendance and roles fix. check in check out etc from china zip
